tests/baselines/reference/exportAssignmentWithoutIdentifier1.errors.txt
==== tests/cases/compiler/exportAssignmentWithoutIdentifier1.ts (1 errors) ====
    function Greeter() {
        //...
    }
    Greeter.prototype.greet = function () {
        //...
    }
    export = new Greeter();
             ~~~
!!! error TS1003: Identifier expected.
    